--- a/index.html
+++ b/index.html
@@ -3,72 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jacobson Robotics - Innovating the Future</title>
-    <style>
-        /* Add your CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #007bff;
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        h1 {
-            font-size: 36px;
-        }
-
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
-
-        .cta-button {
-            display: block;
-            text-align: center;
-            background-color: #007bff;
-            color: #fff;
-            font-size: 20px;
-            padding: 15px 30px;
-            margin: 20px auto;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .cta-button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <title>Jacobson Robotics</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to Jacobson Robotics</h1>
-        <p>Innovating the Future of Robotics</p>
+        <nav>
+            <div class="logo">
+                <img src="logo.png" alt="Jacobson Robotics Logo">
+            </div>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="container">
-        <h2>About Us</h2>
-        <p>Jacobson Robotics is a cutting-edge robotics startup based in sunny San Diego, California. We are passionate about pushing the boundaries of technology to create innovative robotic solutions that make a real impact on the world.</p>
-        <p>Our team of dedicated engineers and researchers is committed to exploring new possibilities in robotics and artificial intelligence.</p>
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Welcome to Jacobson Robotics</h1>
+            <p>Your Partner in Innovative Automation</p>
+            <a href="#contact" class="cta-button">Get Started</a>
+        </div>
+        <div class="hero-image">
+            <img src="hero-image.jpg" alt="Robotic Arm in Action">
+        </div>
+    </section>
 
-        <h2>Join Us</h2>
-        <p>If you share our passion for robotics and want to be part of our journey, we'd love to hear from you!</p>
-        <a href="mailto:contact@jacobsonrobotics.com" class="cta-button">Contact Us</a>
-    </div>
+    <section id="about" class="about">
+        <div class="about-text">
+            <h2>About Us</h2>
+            <p>We are a San Diego-based robotics startup passionate about revolutionizing automation. Our cutting-edge robotics solutions empower businesses to optimize operations and maximize productivity.</p>
+        </div>
+        <div class="about-image">
+            <img src="about-image.jpg" alt="Team of Engineers">
+        </div>
+    </section>
+
+    <section id="products" class="products">
+        <h2>Our Products</h2>
+        <div class="product-card">
+            <img src="product-1.jpg" alt="Product 1">
+            <h3>Product 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod hendrerit felis, nec fringilla justo.</p>
+        </div>
+        <div class="product-card">
+            <img src="product-2.jpg" alt="Product 2">
+            <h3>Product 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod hendrerit felis, nec fringilla justo.</p>
+        </div>
+        <div class="product-card">
+            <img src="product-3.jpg" alt="Product 3">
+            <h3>Product 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod hendrerit felis, nec fringilla justo.</p>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>Ready to transform your business with robotics? Contact us today!</p>
+        <a href="mailto:info@jacobsonrobotics.com" class="cta-button">Email Us</a>
+    </section>
 
     <footer>
         <p>&copy; 2023 Jacobson Robotics</p>
