--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jacobson Robotics - Innovating the Future</title>
+    <title>Jacobson Robotics</title>
     <style>
         /* Add your CSS styles here */
         body {
-            font-family: Arial, sans-serif;
+            font-family: sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #007bff;
+            background-color: #333;
             color: #fff;
             text-align: center;
             padding: 20px 0;
@@ -40,11 +40,11 @@
         .cta-button {
             display: block;
             text-align: center;
-            background-color: #007bff;
+            background-color: #333;
             color: #fff;
             font-size: 20px;
-            padding: 15px 30px;
-            margin: 20px auto;
+            padding: 5px 10px;
+            margin: 15px auto;
             text-decoration: none;
             border-radius: 5px;
         }
@@ -56,13 +56,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Jacobson Robotics</h1>
+        <h1>Jacobson Robotics</h1>
         <p>Innovating the Future of Robotics</p>
     </header>
 
     <div class="container">
         <h2>About Us</h2>
-        <p>Jacobson Robotics is a cutting-edge robotics startup based in sunny San Diego, California. We are passionate about pushing the boundaries of technology to create innovative robotic solutions that make a real impact on the world.</p>
+        <p>Jacobson Robotics is a cutting-edge robotics startup based in San Diego, California. We are passionate about pushing the boundaries of technology to create innovative robotic solutions that make a real impact on the world.</p>
         <p>Our team of dedicated engineers and researchers is committed to exploring new possibilities in robotics and artificial intelligence.</p>
 
         <h2>Join Us</h2>
