--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h1>Welcome to Jacobson Robotics</h1>
+            <h1>Jacobson Robotics</h1>
             <p>Your Partner in Innovative Automation</p>
-            <a href="#contact" class="cta-button">Get Started</a>
         </div>
         <div class="hero-image">
             <img src="hero-image.jpg" alt="Robotic Arm in Action">
@@ -44,11 +43,11 @@
     <section id="products" class="products">
         <h2>Our Products</h2>
         <div class="product-card">
-            <img src="product-1.jpg" alt="Product 1">
+            <img src="product-1.png" alt="Product 1">
             <h3>Product 1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod hendrerit felis, nec fringilla justo.</p>
         </div>
-        <div class="product-card">
+        <!--<div class="product-card">
             <img src="product-2.jpg" alt="Product 2">
             <h3>Product 2</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod hendrerit felis, nec fringilla justo.</p>
@@ -57,7 +56,7 @@
             <img src="product-3.jpg" alt="Product 3">
             <h3>Product 3</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin euismod hendrerit felis, nec fringilla justo.</p>
-        </div>
+        </div>-->
     </section>
 
     <section id="contact" class="contact">
