fixed gif sizing on small devices. updated about text.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>About Us</h2>
             <p>Jacobson Robotics is a pioneering robotics startup headquartered in San Diego, California.</p>
 
-            <p>Our dedicated team of engineers is driven by the belief that technology should allow individuals and organizations to tackle real-world challenges. To achieve this, we are focused on developing low-cost, highly adaptable, and incredibly robust robots. Our goal is to enable their use across a wide spectrum of applications, with minimal setup costs.</p>
+            <p>We are driven by the belief that technology should allow individuals and organizations to tackle real-world challenges. To achieve this, we are focused on developing low-cost, highly adaptable, and incredibly robust robots. Our goal is to enable their use across a wide spectrum of applications, with minimal setup costs.</p>
 
             <p>At Jacobson Robotics, we are not just pushing the boundaries of technology; we are tearing them down to bring about the future - to make the robotic worlds of science fiction a reality. Join us in this exciting adventure towards a future where technology knows no bounds.</p>
         </div>
